--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,3 +1,22 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+
+@media only screen and (min-width: 1200px) {
+    body:has(.requires-no-scroll) {
+        overflow: hidden;
+      }
+
+
+
+}
+
+body:has(.requires-no-scroll) {
+    overflow: hidden;
+  }
+
+
+
+  
