style: added some borders. changed font family

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -19,4 +19,12 @@ body:has(.requires-no-scroll) {
 
 
 
+
+  @layer base {
+    html {
+      font-family: "Lato", system-ui, sans-serif;
+    }
+  }
+
+
   
