--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -28,10 +28,13 @@ body:has(.requires-no-scroll) {
   
   .MuiPagination-root {
     button {
-      color: white !important;
+      color: #f2f2f2 !important;
       border-color: gray;
+      line-height: 0px;
    }
   }
+  
+
   
 
   
