style/fix: fixed transition/hover bug for follow list

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -35,6 +35,13 @@ body:has(.requires-no-scroll) {
   }
   
 
+/* Follow list desktop animations */
+
+.hoverEffect:hover {
+  transform: translateX(.5rem);
+}
+
+
   
 
   
